# AstroSleuth

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  astrodetect.py  convert_to_onnx.py  file_queue.py  main.py  models.json  network.py  requirements.txt  training.md
chainner/: NCNN.chn  ONNX.chn
models/astrodetect/: astrodetect.md
models/astrosleuth/: astrosleuth.md
models/realesr/: realesr.md
modules/: fast.py  next.py  realesr.py
results/: against_blurx.md  conditioning.md  details.md  running.md  tips.md  training.md
slim/rust_src/astrosleuth/: .gitignore  Cargo.toml  conds.json  config.json
slim/rust_src/astrosleuth/src/: cli.rs  main.rs  models.rs  screens.rs  test.rs  tui.rs
slim/rust_src/astrosleuth/src/models/: bilinear.rs  config.rs  lrelu.rs  next.rs  realesr.rs  srvggish.rs
slim/rust_src/astrosleuth/src/screens/: explorer.rs  home.rs
utils/: convert_to_onnx.py  convert_to_safe.py  update.py
