[package]
name = "astrosleuth"
version = "0.1.0"
edition = "2021"
about = "An astrophotography upscaler"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["cuda"] }
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
half = "2.4.1"
image = "0.25.1"
serde = "1.0.203"
serde_json = "1.0.117"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[[bin]]
name = "astrosleuth"
path = "src/main.rs"
